--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "fastclick": "^1.0.6",
     "jquery": "^3.2.1",
+    "mongoose": "^5.0.7",
     "vue": "^2.2.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.2.0",
