--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
+    "element-ui": "^2.2.1",
     "fastclick": "^1.0.6",
     "jquery": "^3.2.1",
     "mongoose": "^5.0.7",
