--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "cookie-parser": "^1.4.3",
     "element-ui": "^2.2.1",
     "fastclick": "^1.0.6",
+    "formidable": "^1.2.0",
+    "fs": "^0.0.1-security",
     "jquery": "^3.2.1",
     "mongoose": "^5.0.7",
+    "multer": "^1.3.0",
+    "path": "^0.12.7",
     "vue": "^2.2.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.2.0",
